--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,11 @@
+atomicwrites==1.1.5
+attrs==18.1.0
+docopt==0.6.2
+funcsigs==1.0.2
 kitchen==1.2.4
-pytz==2016.7
+more-itertools==4.2.0
+pluggy==0.6.0
+py==1.5.3
+pytest==3.6.0
+pytz==2018.4
+six==1.11.0
