Try setting PYTHONPATH and get the current directory

--- a/.drone.yml
+++ b/.drone.yml
@@ -7,8 +7,10 @@ steps:
     image: "python:3.11"
     environment:
       PYTHONUNBUFFERED: 1
+      PYTHONPATH: /
       DEBUG: true
     commands:
+      - pwd
       - pip install -U pip
       - pip install -r ./requirements/development.txt
       - pytest
