--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,11 +22,12 @@ classifiers = [
 ]
 
 dependencies = [
-  "aiofiles",
-  "aiosqlite",
-  "docopt",
-  "python-dotenv",
-  "sentry-sdk"
+  "aiofiles>=23.2.1",
+  "aiosqlite>=0.19.0",
+  "async-timeout>=4.0.3",
+  "docopt>=0.6.2",
+  "python-dotenv>=1.0.0",
+  "sentry-sdk>=1.39.1"
 ]
 
 [project.scripts]
