--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "asimap"
-dynamic = ["version"]
+dynamic = ["version", "dependencies"]
 authors = [
   { name="Scanner Luce", email="scanner@apricot.com" },
 ]
@@ -21,25 +21,18 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 
-dependencies = [
-  "aiofiles>=23.2.1",
-  "aiosqlite>=0.19.0",
-  "async-timeout>=4.0.3",
-  "charset-normalizer>=3.3.2",
-  "docopt>=0.6.2",
-  "python-dotenv>=1.0.0",
-  "python-json-logger>=2.0.7",
-  "sentry-sdk>=1.39.1",
-]
-
 [project.scripts]
 asimapd = "asimap.asimapd:main"
 asimapd_user = "asimap.asimapd_user:main"
+asimapd_set_password = "asimap.set_password:main"
 
 [project.urls]
 Homepage = "https://github.com/scanner/asimap"
 Issues = "https://github.com/scanner/asimap/issues"
 Changelog = "https://github.com/scanner/asimap/blob/main/CHANGELOG.md"
+
+[tool.setuptools.dynamic]
+dependencies = {file = ["requirements/production.txt"]}
 
 [tool.hatch.version]
 path = "asimap/__init__.py"
