--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,5 +23,8 @@ services:
     <<: *imap-service
     image: asimap:dev
     container_name: asimap-dev
+    volumes:
+      - ./:/app:z
+      - "${OPT_ASIMAP_DIR}:/opt/asimap"
     profiles:
       - dev
