account for possibly slower drone runner. Tell uv to use copy mode as part of the drone workflow.

--- a/.drone.yml
+++ b/.drone.yml
@@ -9,6 +9,7 @@ steps:
       PYTHONUNBUFFERED: 1
       PYTHONPATH: /drone/src
 
+      UV_LINK_MODE: copy
       DEBUG: true
     commands:
       - pip install uv
