Convert from pip tools to uv (#457)
* Convert from using pip-tools to using uv

* account for possibly slower drone runner. Tell uv to use copy mode as part of the drone workflow.

--- a/.drone.yml
+++ b/.drone.yml
@@ -9,11 +9,12 @@ steps:
       PYTHONUNBUFFERED: 1
       PYTHONPATH: /drone/src
 
+      UV_LINK_MODE: copy
       DEBUG: true
     commands:
-      - pip install -U pip
-      - pip install -r ./requirements/development.txt
-      - pytest
+      - pip install uv
+      - uv sync --frozen
+      - uv run pytest
 
 ---
 kind: pipeline
