--- a/.drone.yml
+++ b/.drone.yml
@@ -24,11 +24,6 @@ name: Build and Publish Docker Image
 depends_on:
   - AS IMAP Tests
 
-environment:
-  # NOTE: Keep this version in sync with PYTHON_VERSION in Make.rules
-  #       and the test step image above.
-  PYTHON_VERSION: "3.13.12"
-
 steps:
   - name: Build prod
     image: plugins/docker
@@ -42,7 +37,8 @@ steps:
       auto_tag: true
       target: prod
       build_args:
-        - PYTHON_VERSION=${PYTHON_VERSION}
+        # NOTE: Keep PYTHON_VERSION in sync with Make.rules
+        - PYTHON_VERSION=3.13.12
         - VERSION=${DRONE_TAG}
 
   - name: Build dev
@@ -58,7 +54,8 @@ steps:
       auto_tag_suffix: dev
       target: dev
       build_args:
-        - PYTHON_VERSION=${PYTHON_VERSION}
+        # NOTE: Keep PYTHON_VERSION in sync with Make.rules
+        - PYTHON_VERSION=3.13.12
         - VERSION=${DRONE_TAG}
 
 trigger:
