--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,21 +8,9 @@ repos:
       - id: end-of-file-fixer
       - id: check-added-large-files
         args: ["--maxkb=1200"]
-  - repo: https://github.com/pycqa/isort
-    rev: 6.0.1
-    hooks:
-      - id: isort
-        name: isort (python)
-  - repo: https://github.com/psf/black
-    rev: 25.1.0
-    hooks:
-      - id: black
-        language_version: python3.12
-        args: [--config=./pyproject.toml]
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    # Ruff version.
-    rev: v0.9.9
+    rev: v0.15.0
     hooks:
       - id: ruff
-        # NOTE: move before 'isort' and 'black' if --fix is enabled
-        # args: [--fix, --exit-non-zero-on-fix]
+        args: [--fix, --exit-non-zero-on-fix]
+      - id: ruff-format
