--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,13 +62,10 @@ dev = [
     "rich",
     "trustme",
     # Linting and formatting
-    "black",
     "coverage",
-    "isort",
     "mypy",
     "pre-commit",
     "ruff",
-    "yapf",
     # Type stubs
     "types-aiofiles",
     "types-cachetools",
@@ -97,26 +94,31 @@ exclude = [
    ".gitignore",
 ]
 
-[tool.black]
+[tool.ruff]
+target-version = "py312"
 line-length = 80
-exclude = '''
-(
-  /(
-      \.tox
-    | .+/migrations
-    | venv*
-    | \.venv
-    | \.pre-commit-cache
-  )/
-)
-'''
 
-[tool.isort]
-profile = "black"
-line_length = 80
-skip_gitignore = true
-filter_files = true
-skip_glob = ["*venv*","*/migrations/*",".*cache"]
+[tool.ruff.lint]
+select = [
+    "E",   # pycodestyle errors
+    "W",   # pycodestyle warnings
+    "F",   # pyflakes
+    "B",   # flake8-bugbear
+    "C4",  # flake8-comprehensions
+    "UP",  # pyupgrade
+    "I",   # isort
+]
+ignore = [
+    "E501",  # line too long (handled by formatter)
+    "B008",  # do not perform function calls in argument defaults
+    "B905",  # zip() without explicit strict parameter
+]
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+skip-magic-trailing-comma = false
+line-ending = "auto"
 
 [tool.mypy]
 exclude = [
